<resources>
    <string name="google_maps_api_key">YOUR_GOOGLE_API_KEY</string>
    <string name="app_name">Car Crash</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sensor">Sensor</string>
    <string name="buttons">Buttons</string>
    <string name="both">Both</string>
    <string name="play">Play</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="previous_score">Last score: %d</string>
</resources>