<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttons" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLeaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/previousScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/score_size"
        android:text="@string/previous_score"
        android:layout_marginTop="16dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>
